# restaurant-management-system

./: .gitignore  CMakeLists.2txt  CMakeLists.txt  CMakeLists2.txt  CMakeListsGUI.txt  README.md  app2  file.json  main.cpp  test.cpp
gui/: adddish.h  addorder.h  changeaddresswindow.cpp  changeaddresswindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qmlMap.qml
gui/add_dish/: adddish.cpp  adddish.h  adddish.ui
gui/add_employee/: addemployee.cpp  addemployee.h  addemployee.ui
gui/add_ingridient/: addingridient.cpp  addingridient.h  addingridient.ui
gui/add_menu_dish/: addmenudish.cpp  addmenudish.h  addmenudish.ui
gui/add_onsite_order/: addosorder.cpp  addosorder.h  addosorder.ui
gui/add_order/: addorder.cpp  addorder.h  addorder.ui
gui/add_product/: addproduct.cpp  addproduct.h  addproduct.ui
gui/change_address/: changeaddresswindow.cpp  changeaddresswindow.h  changeaddresswindow.ui
gui/change_category/: change_category.ui  changecategory.cpp  changecategory.h  changecategory.ui
gui/change_id/: changeid.cpp  changeid.h  changeid.ui
gui/change_name/: changename.cpp  changename.h  changename.ui
gui/change_salary/: changesalary.cpp  changesalary.h  changesalary.ui
gui/change_surname/: changesurname.cpp  changesurname.h  changesurname.ui
gui/main_window/: mainwindow.cpp  mainwindow.h  mainwindow.ui
json_example/: reader.cpp  writer.cpp
pantry/: makefile  pantry.cpp  pantry_base.txt  result.out
rsc/: marker.qml  qmlMap.qml  restaurants.json
src/: Database.h
src/dish menu/: Dish.cpp  Dish.h  Menu.cpp  Menu.h
src/dish_menu/: Dish.cpp  Dish.h  Menu.cpp  Menu.h
src/employees/: Cook.h  Deliverer.h  Employee.cpp  Employee.h  Manager.h  Staff.h  Waiter.h
src/order/: AbstractOrder.h  BaseOrder.h  DeliveryOrder.h  OnSiteOrder.h
src/pantry/: Pantry.cpp  Pantry.h  Product.h  Stock.h  makefile  pantry.cpp  pantry_base.csv  pantry_base.json
src/restaurant/: Restaurant.cpp  Restaurant.h  RestaurantNet.h
src/utils/: Address.h  Money.cpp  Money.h
